@@ -3,16 +3,15 @@ package de.svws_nrw.data.erzieher;
 import java.io.InputStream;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.Response.Status;
 import de.svws_nrw.core.data.erzieher.Erzieherart;
 import de.svws_nrw.data.DataManager;
 import de.svws_nrw.db.DBEntityManager;
 import de.svws_nrw.db.dto.current.schild.erzieher.DTOErzieherart;
 import de.svws_nrw.db.utils.OperationError;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 
 /**
  * Diese Klasse erweitert den abstrakten {@link DataManager} für den
@@ -44,7 +43,7 @@ public final class DataErzieherarten extends DataManager<Long> {
     	final List<DTOErzieherart> erzieherarten = conn.queryAll(DTOErzieherart.class);
     	if (erzieherarten == null)
     		return OperationError.NOT_FOUND.getResponse();
-    	final List<Erzieherart> daten = erzieherarten.stream().map(dtoMapper).collect(Collectors.toList());
+    	final List<Erzieherart> daten = erzieherarten.stream().map(dtoMapper).toList();
         return Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(daten).build();
 	}
 
@@ -53,7 +52,7 @@ public final class DataErzieherarten extends DataManager<Long> {
     	final List<DTOErzieherart> erzieherarten = conn.queryAll(DTOErzieherart.class);
     	if (erzieherarten == null)
     		return OperationError.NOT_FOUND.getResponse();
-    	final List<Erzieherart> daten = erzieherarten.stream().filter(e -> (e.Sichtbar != null) ? e.Sichtbar : true).map(dtoMapper).collect(Collectors.toList());
+    	final List<Erzieherart> daten = erzieherarten.stream().filter(e -> (e.Sichtbar != null) ? e.Sichtbar : true).map(dtoMapper).toList();
         return Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(daten).build();
 	}
 
