@@ -2,16 +2,15 @@ package de.svws_nrw.data.kataloge;
 
 import java.io.InputStream;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.Response.Status;
 import de.svws_nrw.core.data.kataloge.OrtsteilKatalogEintrag;
 import de.svws_nrw.data.DataManager;
 import de.svws_nrw.db.DBEntityManager;
 import de.svws_nrw.db.dto.current.schild.katalog.DTOOrtsteil;
 import de.svws_nrw.db.utils.OperationError;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 
 /**
  * Diese Klasse erweitert den abstrakten {@link DataManager} für den
@@ -42,7 +41,7 @@ public final class DataOrtsteile extends DataManager<Long> {
     		eintrag.istSichtbar = k.Sichtbar;
     		eintrag.istAenderbar = k.Aenderbar;
     		return eintrag;
-    	}).collect(Collectors.toList());
+    	}).toList();
         return Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(daten).build();
 	}
 
