@@ -50,16 +50,16 @@ public final class DataKlassenlisten extends DataManager<Long> {
 	@Override
 	public Response getList() {
     	final var klassen = conn.queryNamed("DTOKlassen.schuljahresabschnitts_id", abschnitt, DTOKlassen.class);
-    	if ((klassen == null) || (klassen.size() == 0))
+    	if ((klassen == null) || (klassen.isEmpty()))
     		throw new WebApplicationException(Status.NOT_FOUND.getStatusCode());
-    	final List<Long> klassenIDs = klassen.stream().map(kl -> kl.ID).collect(Collectors.toList());
+    	final List<Long> klassenIDs = klassen.stream().map(kl -> kl.ID).toList();
     	final Map<Long, List<DTOKlassenLeitung>> klassenLeitungen = conn.queryNamed("DTOKlassenLeitung.klassen_id.multiple", klassenIDs, DTOKlassenLeitung.class)
     			.stream().collect(Collectors.groupingBy(kll -> kll.Klassen_ID));
     	// Bestimme die Schüler der Klasse
     	final List<DTOSchuelerLernabschnittsdaten> listSchuelerLernabschnitte = conn.query("SELECT e FROM DTOSchuelerLernabschnittsdaten e WHERE e.Klassen_ID IN ?1 AND e.WechselNr IS NULL", DTOSchuelerLernabschnittsdaten.class)
     			.setParameter(1, klassenIDs).getResultList();
     	final List<Long> schuelerIDs = listSchuelerLernabschnitte.stream().map(sla -> sla.Schueler_ID).toList();
-    	final Map<Long, DTOSchueler> mapSchueler = schuelerIDs == null || schuelerIDs.size() == 0 ? new HashMap<>()
+    	final Map<Long, DTOSchueler> mapSchueler = schuelerIDs == null || schuelerIDs.isEmpty() ? new HashMap<>()
     			: conn.queryNamed("DTOSchueler.id.multiple", schuelerIDs, DTOSchueler.class).stream().collect(Collectors.toMap(s -> s.ID, s -> s));
     	final HashMap<Long, List<Schueler>> mapKlassenSchueler = new HashMap<>();
     	for (final DTOSchuelerLernabschnittsdaten sla : listSchuelerLernabschnitte) {
@@ -90,7 +90,7 @@ public final class DataKlassenlisten extends DataManager<Long> {
     		if (klSchueler != null)
     			eintrag.schueler.addAll(klSchueler);
     		return eintrag;
-    	}).sorted((a, b) -> Long.compare(a.sortierung, b.sortierung)).collect(Collectors.toList());
+    	}).sorted((a, b) -> Long.compare(a.sortierung, b.sortierung)).toList();
         return Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(daten).build();
 	}
 
