@@ -5,12 +5,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
-import jakarta.ws.rs.WebApplicationException;
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.Response.Status;
 import de.svws_nrw.core.data.schueler.SchuelerBetriebsdaten;
 import de.svws_nrw.data.DataManager;
 import de.svws_nrw.data.JSONMapper;
@@ -24,6 +19,10 @@ import de.svws_nrw.db.dto.current.schild.schueler.DTOSchuelerAllgemeineAdresse;
 import de.svws_nrw.db.dto.current.svws.db.DTODBAutoInkremente;
 import de.svws_nrw.db.schema.Schema;
 import de.svws_nrw.db.utils.OperationError;
+import jakarta.ws.rs.WebApplicationException;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 
 /**
  * Diese Klasse erweitert den abstrakten {@link DataManager} für den
@@ -67,7 +66,7 @@ public final class DataSchuelerBetriebsdaten extends DataManager<Long> {
 		 final List<DTOSchuelerAllgemeineAdresse> betriebe = conn.queryAll(DTOSchuelerAllgemeineAdresse.class);
 		 if (betriebe == null)
 			 return OperationError.NOT_FOUND.getResponse();
-		 final List<SchuelerBetriebsdaten> daten = betriebe.stream().map(dtoMapper).collect(Collectors.toList());
+		 final List<SchuelerBetriebsdaten> daten = betriebe.stream().map(dtoMapper).toList();
 		 return Response.status(Status.OK).type(MediaType.APPLICATION_JSON).entity(daten).build();
 	 }
 
