@@ -1,15 +1,12 @@
 package de.svws_nrw.data.schueler;
 
 import java.io.InputStream;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.ArrayList;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.Response.Status;
 import de.svws_nrw.core.data.schueler.SchuelerLernabschnittListeEintrag;
 import de.svws_nrw.data.DataManager;
 import de.svws_nrw.db.DBEntityManager;
@@ -18,6 +15,9 @@ import de.svws_nrw.db.dto.current.schild.schueler.DTOSchueler;
 import de.svws_nrw.db.dto.current.schild.schueler.DTOSchuelerLernabschnittsdaten;
 import de.svws_nrw.db.dto.current.schild.schule.DTOSchuljahresabschnitte;
 import de.svws_nrw.db.utils.OperationError;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 
 
 /**
@@ -55,8 +55,8 @@ public final class DataSchuelerLernabschnittsliste extends DataManager<Long> {
     	daten.schuelerID = dto.Schueler_ID;
     	daten.schuljahresabschnitt = dto.Schuljahresabschnitts_ID;
     	daten.wechselNr = dto.WechselNr;
-    	daten.istGewertet = dto.SemesterWertung == null ? true : dto.SemesterWertung;
-    	daten.istWiederholung = dto.Wiederholung == null ? false : dto.Wiederholung;
+    	daten.istGewertet = dto.SemesterWertung == null || dto.SemesterWertung;
+    	daten.istWiederholung = dto.Wiederholung != null && dto.Wiederholung;
     	daten.pruefungsOrdnung = dto.PruefOrdnung;
     	daten.klassenID = dto.Klassen_ID;
     	daten.jahrgangID = dto.Jahrgang_ID;
@@ -72,17 +72,17 @@ public final class DataSchuelerLernabschnittsliste extends DataManager<Long> {
 			return OperationError.NOT_FOUND.getResponse();
     	final DTOSchueler schueler = conn.queryByKey(DTOSchueler.class, id);
     	if (schueler == null)
-			return OperationError.NOT_FOUND.getResponse();
+    		return OperationError.NOT_FOUND.getResponse();
     	// Bestimme die Lernabschnitte
     	final List<DTOSchuelerLernabschnittsdaten> abschnitte = conn.queryNamed("DTOSchuelerLernabschnittsdaten.schueler_id", id, DTOSchuelerLernabschnittsdaten.class);
     	if (abschnitte == null)
-			return OperationError.INTERNAL_SERVER_ERROR.getResponse();
+    		return OperationError.INTERNAL_SERVER_ERROR.getResponse();
     	// Bestimme die Klassen aus den Abschnitte und liese diese aus der Klassentabelle aus
-    	final List<Long> klassenIDs = abschnitte.stream().map(a -> a.Klassen_ID).collect(Collectors.toList());
+    	final List<Long> klassenIDs = abschnitte.stream().map(a -> a.Klassen_ID).toList();
     	final List<DTOKlassen> klassen = conn.queryNamed("DTOKlassen.id.multiple", klassenIDs, DTOKlassen.class);
     	final Map<Long, DTOKlassen> mapKlassen = klassen.stream().collect(Collectors.toMap(k -> k.ID, k -> k));
     	// Bestimme die Schuljahres-Abschnitte
-    	final List<Long> schuljahresabschnittIDs = abschnitte.stream().map(a -> a.Schuljahresabschnitts_ID).collect(Collectors.toList());
+    	final List<Long> schuljahresabschnittIDs = abschnitte.stream().map(a -> a.Schuljahresabschnitts_ID).toList();
     	final List<DTOSchuljahresabschnitte> schuljahresabschnitte = conn.queryNamed("DTOSchuljahresabschnitte.id.multiple", schuljahresabschnittIDs, DTOSchuljahresabschnitte.class);
     	final Map<Long, DTOSchuljahresabschnitte> mapSchuljahresabschnitte = schuljahresabschnitte.stream().collect(Collectors.toMap(a -> a.ID, a -> a));
     	// Konvertiere die Lenabschnitte, ergänze sie um die Klassen- und Schuljahresabschnittsinformationen und füge sie zur Liste hinzu
